--- a/test-ui/src/main/resources/static/app/user/views/user.html
+++ b/test-ui/src/main/resources/static/app/user/views/user.html
@@ -17,8 +17,7 @@
                 </div>
                 <div class="panel-body">
 
-
-                    <input type="hidden" name="userId" ng-value="user.id" ng-init="user.id = id" />
+                    <input type="hidden" name="id" ng-model="user.id" />
 
                     <div class="form-group">
                         <label name="name" class="nome required control-label">Nome</label>
